--- a/app/views/pet_histories/index.html.erb
+++ b/app/views/pet_histories/index.html.erb
@@ -18,14 +18,15 @@
         <td><%= pet_history.weight %></td>
         <td><%= pet_history.heigth %></td>
         <td><%= pet_history.description %></td>
-        <td><%= link_to 'Show', pet_history %></td>
-        <td><%= link_to 'Edit', edit_pet_history_path(pet_history) %></td>
-        <td><%= link_to 'Destroy', pet_history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', pet_pet_history_path(pet_history.pet_id, pet_history.id) %></td>
+        <td><%= link_to 'Edit', edit_pet_pet_history_path(pet_history.pet_id, pet_history.id) %></td>
+        <td><%= link_to 'Destroy',  pet_pet_histories_destroy_path(pet_history.pet_id, pet_history.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<%# pet/:pet_id/pet_histories/new %>
 
-<%= link_to 'New Pet History', new_pet_history_path %>
+<%= link_to 'New Pet History', new_pet_pet_history_path(@pet.id) %>
